tests/NormalTests/paczka1/small_fuzzy/34363549.err
Error in line 3: mC2 A680 62,7
Error in line 5: mC2 A210 35,1
Error in line 6: mC2 A362 72,1
Error in line 13: mC2 A21E 19E,5
Error in line 9: Hfz4Z6lvx8M A362 93,2
